source/style/base.scss
@use 'sass:math';
@import "common/bulma";

.icon {
  width: 1em;
  height: 1em;
  vertical-align: -0.15em;
  fill: currentColor;
  overflow: hidden;
}

@import "common/variable";
@import "themes/theme";

:root {

  body {
    margin: 0;
    height: 100vh;
    padding-top: 45px;

    a {
      color: inherit;

      &:hover, &:hover .icon {
        text-decoration: none;
        color: $activeColor!important;
      }
    }

    .tag.post-item-tag {
      margin-right: 5px;

      font-weight: bold;
      color: darkorange;
      font-style: normal;

      border-radius: 10px;
      background: transparent;
      border: 2px solid darkorange;
    }

    .button.is-default {
      height: 40px;

      border: none;
      border-radius: $borderRadius;
      color: var(--second-text-color);
      background: var(--third-bg-color);
    }

    > main {
      flex-grow: 2;
      flex-basis: 0;
    }

    > footer {
      margin: 0 30px;
      padding: 0 0 48px;

      .sns-container .icon {
        margin: 0 5px;
        font-size: 30px;
        height: 45px;
      }
    }
  }

  @supports (margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)) {
    body {
      margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
    }
  }
}

@import "widget-header";
@import "common/helper";
@import "widget-post-list";
@import "themes/highlight-theme-light";
@import "post";

.post-container .aside-card-container.tloA {
  background: var(--third-bg-color);

  &:hover {
    p, h3, li{
      color: var(--activeColor) !important;
    }
  }

  ul li:before {
    content: '✓ '; 
    color: rgb(65, 189, 107);
  }
}

.tloC.tloWarp {
  padding: 10px;
  margin-bottom: 15px;
  box-shadow: 0 6px 30px -10px rgba(0, 0, 0, 0.1);
  border-radius: 6px;
  background: var(--third-bg-color);
  border: 1px solid var(--border-line-color-2);
}

#widgetA {
  display: block !important;
  min-height: 40px;
  border: 1px solid var(--border-line-color-2) !important;
  overflow: hidden;
  border-radius: 6px !important;
}

#widgetA > *, #widgetA > ins {
  margin: -1px!important;
}

#widgetA[data-ad-status="unfilled"] {
  display: none !important;
}

:root {
  --device-pixel-ratio: 1;
}

@for $i from 3 through 8 {
  $j: math.div($i, 2);
  @media (-webkit-min-device-pixel-ratio: #{$j}),
        (min--moz-device-pixel-ratio: #{$j}),
        (min-resolution: #{$j}dppx) {
    :root {
      --device-pixel-ratio: #{$j};
    }
  }
}

